Mon Jan 28 18:02:16 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_backtrace.c (rb_debug_inspector_frame_{class,binding,iseq}_get):
	  use long as index as well as RARRAY_LEN().

Mon Jan 28 17:58:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_backtrace.c (rb_debug_inspector_frame_{class,binding,iseq}_get):
	  use long as index as well as RARRAY_LEN().

Mon Jan 28 17:51:38 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (assert_separately): imply no core dump.

Mon Jan 28 12:32:31 2013  Tanaka Akira  <akr@fsij.org>

	* ext/fcntl/fcntl.c: update document.  use "file descriptor" instead
	  of "file handle" because it is not used other Ruby documents and
	  it is confusing with Windows file handle.
	  correct F_DUPFD behavior.

Sat Jan 26 22:39:12 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object): dump instance variables of the result of
	  marshal_dump not the original object.  [ruby-core:51163] [Bug #7627]

	* complex.c (nucomp_marshal_dump): need to copy instance variables.

	* rational.c (nurat_marshal_dump): ditto.

Sat Jan 26 13:35:56 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/fcntl/fcntl.c:  Document Fcntl constants

Sat Jan 26 12:54:40 2013  Eric Hodel  <drbrain@segment7.net>

	* hash.c (rb_env_size):  Restored documentation for ENV.size

	* lib/drb/drb.rb:  Documented DRb::DRb#run.

	* lib/erb.rb (class ERB):  Improved documentation of ERb.

	* transcode.c:  Documented Encoding::Converter constants.

Sat Jan 26 10:09:57 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/accesslog.rb:  Improved WEBrick documentation.
	* lib/webrick/cgi.rb:  ditto.
	* lib/webrick/config.rb:  ditto.
	* lib/webrick/cookie.rb:  ditto.
	* lib/webrick/httpauth/authenticator.rb:  ditto.
	* lib/webrick/httpauth/basicauth.rb:  ditto.
	* lib/webrick/httpauth/digestauth.rb:  ditto.
	* lib/webrick/httpproxy.rb:  ditto.
	* lib/webrick/httprequest.rb:  ditto.
	* lib/webrick/httpresponse.rb:  ditto.